--- a/elements/crew-team-manager-roster/crew-team-manager-roster-list-loading.html
+++ b/elements/crew-team-manager-roster/crew-team-manager-roster-list-loading.html
@@ -2,7 +2,7 @@
 
 <link rel="import" href="../../bower_components/paper-spinner/paper-spinner-lite.html">
 
-<dom-module id="crew-team-manager-roster-loading">
+<dom-module id="crew-team-manager-roster-list-loading">
     <template>
         <style>
          :host {
@@ -31,18 +31,26 @@
 
     <script>
         // Extend Polymer.Element with MyMixin
-        class crewTeamManagerRosterLoading extends Polymer.Element {
+        class crewTeamManagerRosterListLoading extends Polymer.Element {
 
             static get is() {
-                return 'crew-team-manager-roster-loading'
+                return 'crew-team-manager-roster-list-loading'
+            }
+
+            static get properties() {
+                return {
+                    data: {
+                        type: Object,
+                    }
+                }
             }
 
             _handleClick() {
-                console.log(this.firebase.Query);
+                console.log(this.data);
             }
         }
 
         // Register custom element definition using standard platform API
-        customElements.define(crewTeamManagerRosterLoading.is, crewTeamManagerRosterLoading);
+        customElements.define(crewTeamManagerRosterListLoading.is, crewTeamManagerRosterListLoading);
     </script>
 </dom-module>
