--- a/elements/crew-team-manager-stage/crew-team-manager-stage.html
+++ b/elements/crew-team-manager-stage/crew-team-manager-stage.html
@@ -47,16 +47,20 @@
                 @apply(--layout-flex);
             }
 
-            #drawer {
-                box-shadow: var(--app-drawer-content-container_-_box-shadow);
-            }
-
             #fleet {
                 @apply(--layout-flex);
             }
 
             button {
                 font-size: 18px;
+            }
+
+            #drawer {
+                --paper-drawer-shadow: {
+                    height: 24px;
+                    box-shadow: inset 0 24px 4px -4px rgba(0, 0, 0, 0.4);
+                }
+                ;
             }
         </style>
 
